# opencv-tutorial

./: CMakeLists.txt  Config.h.in  Makefile-deprecated  build_info.txt  default.nix  flake.nix
opencv/: opencv4.nix
src/: add-images.cpp  basic-linear-transform.cpp  build-information.cpp  convolution.cpp  cpu-vs-gpu.cpp  discrete-fourier-transform.cpp  display-image.cpp  file-input-output.cpp  mask-operation.cpp  scan-image.cpp  test.cpp  univ-intrin.cpp  video-input-pnsr-ssim.cpp
